k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ecommerce-backend
  labels:
    app: ecommerce
spec:
  replicas: 3
  selector:
    matchLabels:
      app: ecommerce
  template:
    metadata:
      labels:
        app: ecommerce
    spec:
      containers:
        - name: node-api
          image: yourdockerhubusername/ecommerce-backend:latest
          ports:
            - containerPort: 5000
          volumeMounts:
            - name: uploads-volume
              mountPath: /app/uploads
      volumes:
        - name: uploads-volume
          emptyDir: {}
